--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
@@ -18,13 +19,16 @@
     "multer": "^1.3.0",
     "nodemailer": "^4.6.3",
     "nodemailer-smtp-transport": "^2.7.4",
+    "nodemon": "^1.17.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "start node server.js",
-    "start": "node server.js"
+    "start":"nodemon start server.js"
+  },
+  "engines":{
+    "node":"6.11.3"
   },
   "author": "tushar uppal",
   "license": "ISC"
